# gfjupyter_ai

jupyter_ai/: .jupyter_ystore.db  ENVIRONMENT_VARIABLES.md  MANIFEST.in  README.md  build_whl.py  conda_packages.txt  environment_info.txt  examples.ipynb  jupyter_ai_env.bat  myconda_environment.yml  pip_packages.txt  pyproject.toml  requirements.txt  setup.py
jupyter_ai/jupyter_ai_custom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
jupyter_ai/personas/: base_persona.py
jupyter_ai/personas/api_knowledge/: api_schemas.json  vector_db.pkl
jupyter_ai/personas/api_knowledge/extra/: GFQuant数据API — gfquant 1.7.0 文档.txt  PMS导入组合 — gfquant 1.7.0 文档.txt  回测平台简介 — gfquant 1.7.0 文档.txt  因子数据接口 — gfquant 1.7.0 文档.txt  因子标准化处理 — gfquant 1.7.0 文档.txt  定制回测框架_ Alpha模型 — gfquant 1.7.0 文档.txt  定制回测框架_ 单因子模型 — gfquant 1.7.0 文档.txt  定制回测框架_ 因子分组分析 — gfquant 1.7.0 文档.txt  定制回测框架_ 按权重调仓 — gfquant 1.7.0 文档.txt  用户自定义因子API — gfquant 1.7.0 文档.txt  策略保存和共享 — gfquant 1.7.0 文档.txt  策略回测API — gfquant 1.7.0 文档.txt  组合优化接口 — gfquant 1.7.0 文档.txt  组合构建接口 — gfquant 1.7.0 文档.txt  绩效分析接口 — gfquant 1.7.0 文档.txt  通用策略回测框架 — gfquant 1.7.0 文档.txt  量化投研平台简介 — gfquant 1.7.0 文档.txt
jupyter_ai/personas/company_ai/: __init__.py  company_ai_persona.py  path_config.py  prompt_template.py  rag_manager.py  rag_system.py
jupyter_ai/personas/jupyternaut/: .jupyter_ystore.db  env_config.py  jupyternaut.py  jupyternaut.py.bak  prompt_template.py  requirements.txt  test.py
