[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-ai-custom"
version = "3.0.0b5"
description = "Custom Jupyter AI with RAG system and company-specific features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Company", email = "your-email@company.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
]
dependencies = [
    "jupyterlab>=4.0.0",
    "langchain>=0.1.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/your-company/jupyter-ai-custom"
Repository = "https://github.com/your-company/jupyter-ai-custom"
Issues = "https://github.com/your-company/jupyter-ai-custom/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jupyter_ai*"]

[tool.setuptools.package-data]
jupyter_ai = [
    "static/*",
    "personas/*/requirements.txt",
    "*.md",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88